--- a/MaintenanceSystem/src/msystem/CheckOutScreen.form
+++ b/MaintenanceSystem/src/msystem/CheckOutScreen.form
@@ -109,7 +109,7 @@
                       <Component id="checkoutCancelBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="checkoutCheckOutBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="0" pref="17" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="21" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -126,8 +126,18 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="checkoutUserIDField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Cascadia Code" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="checkoutEquipCharField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Cascadia Code" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -135,6 +145,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="checkoutEquipNumField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Cascadia Code" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="checkoutCheckOutBtn">
           <Properties>
@@ -150,6 +165,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="checkoutEquipNameField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Cascadia Code" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="checkoutCancelBtn">
           <Properties>
@@ -165,6 +185,11 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="checkoutEquipDescriptionField">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Cascadia Code" size="12" style="0"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
