--- a/MaintenanceSystem/src/msystem/EditEmployee.form
+++ b/MaintenanceSystem/src/msystem/EditEmployee.form
@@ -30,7 +30,6 @@
                   <Component id="jLabel3" min="-2" pref="66" max="-2" attributes="0"/>
                   <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="37" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jScrollPane1" alignment="0" pref="177" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
@@ -39,6 +38,7 @@
                               <Component id="editEmpCancelButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <Component id="jLabel1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" alignment="0" pref="177" max="32767" attributes="0"/>
                   <Component id="jScrollPane3" alignment="0" pref="177" max="32767" attributes="0"/>
@@ -185,7 +185,6 @@
       </Properties>
       <Events>
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="editEmpRoleComboBoxItemStateChanged"/>
-        <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="editEmpRoleComboBoxPropertyChange"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
